# heart-visualization

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  ModelPartitioner.py  README.md  main.cpp  main.cpp.autosave  modelSort.py  partitioner.cpp  partitioner.h  partitioner.h~
heart-visualization-multi/: CMakeLists.txt  Cell.cpp  Cell.h  DataProcessor.cpp  DataProcessor.h  MyHeart.cpp  MyHeart.h  Solver.cpp  Solver.h  main.cpp
heart-visualization-serial/: CMakeLists.txt  Cell.cpp  Cell.h  MyHeart.cpp  MyHeart.h  Solver.cpp  Solver.h  main.cpp  mesh.hpp
mesh-partition/: CMakeLists.txt  main.cpp  partitioner.h
mesh-partition/metis-5.1.0/include/: metis.h.gch
scripts/: CreateAllCellFile.py  resultProcessor.py
