cmake_minimum_required(VERSION 2.8)
project(mesh-partition)
include_directories(~/libs/metis/metis-5.1.0/include)
add_executable(mesh-partition main.cpp)
add_library(partitioner STATIC partitioner.cpp)
target_link_libraries(partitioner /home/dmitry/libs/metis/metis-5.1.0/build/Linux-x86_64/libmetis/libmetis.a)
target_link_libraries(mesh-partition partitioner)
set(CMAKE_CXX_FLAGS "-std=c++11")
